--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-licensing": "^1.3.3",
+    "@progress/kendo-react-pdf": "^6.1.1",
+    "@progress/kendo-theme-default": "^7.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "hooks": "^0.3.2",
+    "mathjs": "^12.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "^5.0.1",
+    "useref": "^1.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1"
   }
 }
